Style : updated css

--- a/style/comman.css
+++ b/style/comman.css
@@ -13,3 +13,17 @@
     padding: 0;
     text-decoration: none;
 }
+
+.flex{
+    display:flex;
+}
+
+.center{
+    align-items: center;
+    justify-content: center;
+}
+
+.flex-wrap{
+    display: flex;
+    flex-wrap: nowrap;
+}
