--- a/style/Avatar.css
+++ b/style/Avatar.css
@@ -35,7 +35,7 @@
   width: 5.5rem;
   height: 5.5rem;
 }
-.avatar-l {
+.avatar-lg {
   width: 4.5rem;
   height: 4.5rem;
 }
@@ -43,7 +43,7 @@
   width: 4rem;
   height: 4rem;
 }
-.avatar-s {
+.avatar-sm {
   width: 3rem;
   height: 3rem;
 }
