--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -5,7 +5,6 @@ body{
 .sidebar ul li a{
     color: var(--black-color);
     padding: 0 30px;
-    
 }
 .sidebar{
     position: fixed;
@@ -18,8 +17,7 @@ body{
 }
 .sidebar h3{
     text-align: center;
-    padding: 20px;
-    padding-top: 100px;
+    padding: 100px 20px 20px 20px;
 }
  .sidebar ul li{
      text-align: center;
