feat : added button and badge component

--- a/main.css
+++ b/main.css
@@ -5,3 +5,6 @@
 @import url(style/sidebar.css);
 @import url(style/Avatar.css);
 @import url(style/Alerts.css);
+@import url(style/Badges.css);
+@import url(style/Button.css);
+
