--- a/style/comman.css
+++ b/style/comman.css
@@ -5,6 +5,10 @@
     --background-color:#F8C0C8;
     /* --background-color:#c99198; */
     --hover-color:#f3bbc3;
+    --red-color:#e74c3c;
+    --green-color:#2ecc71;
+    --yellow-color:#f1c40f;
+    --blue-color:#3498db;
 }
 
 *{
