styles: updated css

--- a/style/Badges.css
+++ b/style/Badges.css
@@ -62,6 +62,16 @@
   height: 4rem;
 }
 .icon-lg {
+  width: 0.9rem;
+  height: 0.9rem;
+  font-size: 0.6rem;
+}
+.icon-md {
+  width: 0.8rem;
+  height: 0.8rem;
+  font-size: 0.6rem;
+}
+.icon-xl {
   width: 1rem;
   height: 1rem;
   font-size: 0.6rem;
