Feat : Input, Images and headings added

--- a/main.css
+++ b/main.css
@@ -7,4 +7,19 @@
 @import url(style/Alerts.css);
 @import url(style/Badges.css);
 @import url(style/Button.css);
+@import url(style/Images.css);
+@import url(style/Typography.css);
+@import url(style/List.css);
+@import url(style/navigation.css);
+@import url(style/Input.css);
+@import url(style/Rating.css);
+@import url(style/Grid.css);
+@import url(style/Card.css);
+
+
+
+
+
+
+
 
