--- a/style/Badges.css
+++ b/style/Badges.css
@@ -9,7 +9,7 @@
 }
 .badge-button {
   position: relative;
-  margin: 10px;
+  /* margin: 10px; */
   color: var(--black-color);
   background-color: transparent;
   border: none;
@@ -65,4 +65,14 @@
   width: 1rem;
   height: 1rem;
   font-size: 0.6rem;
+}
+.icon-xl{
+  width: 1.2rem;
+  height: 1.2rem;
+  font-size: 0.8rem;
+}
+.icon-md{
+  width: 0.8rem;
+  height: 0.8rem;
+  font-size: 0.5rem;
 }
