--- a/style/Avatar.css
+++ b/style/Avatar.css
@@ -23,7 +23,7 @@
 }
 .avatar-items{
     padding: 10px 0px 10px 0px;
-    border: 0.5px solid rgba(128, 128, 128, 0.363);
+    border: 0.5px solid var(--border-color);
     border-radius: 10px;
     margin: 20px 0px 20px 0px;
 }
