--- a/style/Button.css
+++ b/style/Button.css
@@ -1,6 +1,6 @@
 .button-items{
     padding:20px;
-    border: 0.5px solid rgba(128, 128, 128, 0.363);
+    border: 0.5px solid var(--border-color);
     margin: 20px;
 }
 .btn {
