--- a/style/Images.css
+++ b/style/Images.css
@@ -4,7 +4,7 @@
 }
 .image-items{
     padding:20px;
-    border: 0.5px solid rgba(128, 128, 128, 0.363);
+    border: 0.5px solid var(--border-color);
     margin: 20px;
 }
 .img-round{
