--- a/style/Badges.css
+++ b/style/Badges.css
@@ -1,8 +1,9 @@
 .badge-items {
   align-items: flex-end;
   justify-content: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  /* padding-top: 20px;
+  padding-bottom: 20px; */
+  padding: 20px 20px;
   background-color: transparent;
   border: 0.5px solid var(--border-color);
   margin: 10px;
