--- a/style/Input.css
+++ b/style/Input.css
@@ -23,10 +23,12 @@ width: 20%;
 .Error-message{
     color:var(--red-color);
     font-size: 15px;
+    font-weight: 800;
 }
 .validation-msg{
     color:var(--yellow-color);
     font-size: 15px;
+    font-weight: 800;
 }
 .space{
     padding:10px;
