--- a/style/Typography.css
+++ b/style/Typography.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 350px;
-    font-weight: 600px;
+    font-weight: 600;
 }
 .heading-1 {
     font-size: 32px;
