--- a/style/Card.css
+++ b/style/Card.css
@@ -1,10 +1,9 @@
 .description {
-    background-color: rgba(128, 128, 128, 0.308);
+    background-color: var(--border-color);
     padding-top: 2.2px;
     margin: 0;
   }
   img {
-    /* width: 90%; */
     height: 200px;
     width: 200px;
     margin-bottom: 0;
@@ -13,15 +12,14 @@
   .card-container {
     width: 200px;
     height: 300px;
-    background-color: white;
-    border: 0.5px solid lightgray;
-    /* padding: 2px; */
+    background-color: var(--white-color);
+    border: 0.5px solid var(--light-gray);
     text-align: center;
     position: relative;
   }
   .card-with-badge {
     display: inline;
-    color: red;
+    color: var(--red-color);
     padding: 4px;
     position: absolute;
     right: 10px;
@@ -37,26 +35,22 @@
   
   .add-cart-btn {
     width: 200px;
-    background-color: #008cba;
+    background-color: var(--blue-color);
     padding: 6px;
     border: 0;
-    color: white;
+    color: var(--white-color);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
   }
 
   .image-overlay {
     position: absolute;
     top: 0;
-    /* left: 35px; */
     width: 200px;
     height: 200px;
     background-color: rgba(0, 0, 0, 0.6);
-    color: white;
-    display: flex;
+    color: var(--white-color);
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     opacity: 0;
   }
   
@@ -67,16 +61,16 @@
   .text-card-container {
     width: 250px;
     height: 180px;
-    background-color: white;
+    background-color: var(--white-color);
     border-radius: 5px;
     padding: 10px;
     text-align: center;
     position: relative;
-    border:0.5px solid lightgrey;
+    border:0.5px solid var(--light-gray);
   }
   .cross {
     text-decoration: none;
-    color: red;
+    color: var(--red-color);
     position: absolute;
     right: 10px;
   }
