update : changed px values to rem

--- a/style/Card.css
+++ b/style/Card.css
@@ -4,14 +4,14 @@
     margin: 0;
   }
   img {
-    height: 200px;
-    width: 200px;
+    height: 12.5rem;
+    width: 12.5rem;
     margin-bottom: 0;
     padding: 0;
   }
   .card-container {
-    width: 200px;
-    height: 300px;
+    width: 12.5rem;
+    height: 18.75rem;
     background-color: var(--white-color);
     border: 0.5px solid var(--light-gray);
     text-align: center;
@@ -34,7 +34,7 @@
   }
   
   .add-cart-btn {
-    width: 200px;
+    width: 12.5rem;
     background-color: var(--blue-color);
     padding: 6px;
     border: 0;
@@ -45,9 +45,9 @@
   .image-overlay {
     position: absolute;
     top: 0;
-    width: 200px;
-    height: 200px;
-    background-color: rgba(0, 0, 0, 0.6);
+    width: 12.5rem;
+    height: 12.5rem;
+    background-color: var(--card-overlay-color);
     color: var(--white-color);
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     flex-direction: column;
@@ -59,8 +59,8 @@
   }
 
   .text-card-container {
-    width: 250px;
-    height: 180px;
+    width: 15rem;
+    height: 11.25rem;
     background-color: var(--white-color);
     border-radius: 5px;
     padding: 10px;
