--- a/style/Avatar.css
+++ b/style/Avatar.css
@@ -1,5 +1,5 @@
 .main-title{
-    margin-left: 200px;
+    margin-left: 12.5rem;
     padding: 40px;
 }
 
@@ -9,7 +9,7 @@
     margin: 10px;
 }
 
-.avatar-heading{
+.component-heading{
     margin-top:50px;
     padding: 0px 20px 20px 20px;
     font-size: 30px;
