--- a/style/comman.css
+++ b/style/comman.css
@@ -14,6 +14,7 @@
     --light-gray: lightgray;
     --navigation-color:rgb(209, 201, 201);
     --card-overlay-color:rgba(0, 0, 0, 0.6);
+    --list-hover:#e6e4e4;
 }
 
 *{
