--- a/style/navigation.css
+++ b/style/navigation.css
@@ -1,32 +1,31 @@
-.navigation-item{
-    padding:1.25rem;
-    border: 0.5px solid var(--border-color);
-    margin: 1.25rem;
+.navigation-item {
+  padding: 1.25rem;
+  border: 0.5px solid var(--border-color);
+  margin: 1.25rem;
 }
-.nav-item{
-    background-color: var(--navigation-color);
-
+.nav-item {
+  background-color: var(--navigation-color);
 }
-.left-nav{
-    align-items: center;
-    justify-content: space-between;
-    width:43.75rem;
-    padding-right: 12em;
+.left-nav {
+  align-items: center;
+  justify-content: space-between;
+  width: 43.75rem;
+  padding-right: 12em;
 }
-.right-nav{
-    align-items: center;
-    justify-content: space-around;
-    width:18.75rem; 
+.right-nav {
+  align-items: center;
+  justify-content: space-around;
+  width: 18.75rem;
 }
-.nav-heading{
-    font-size:1.25rem;
-    text-decoration: none;
-    color:var(--black-color);
-    font-weight: 800;
-    padding-left: 3.75rem;
+.nav-heading {
+  font-size: 1.25rem;
+  text-decoration: none;
+  color: var(--black-color);
+  font-weight: 800;
+  padding-left: 3.75rem;
 }
-.search-bar{
-    padding: 8px 15px;
-    border-radius: 10px;
-    border:1px solid var(--black-color)
+.search-bar {
+  padding: 8px 15px;
+  border-radius: 10px;
+  border: 1px solid var(--black-color);
 }
