feat: Modal and toast added

--- a/main.css
+++ b/main.css
@@ -15,3 +15,7 @@
 @import url(style/Rating.css);
 @import url(style/Grid.css);
 @import url(style/Card.css);
+@import url(style/modal.css);
+@import url(style/Toast.css);
+
+
