--- a/style/navigation.css
+++ b/style/navigation.css
@@ -9,13 +9,13 @@
 .left-nav {
   align-items: center;
   justify-content: space-between;
-  width: 43.75rem;
+  width: 70%;
   padding-right: 12em;
 }
 .right-nav {
   align-items: center;
   justify-content: space-around;
-  width: 18.75rem;
+  width: 30%;
 }
 .nav-heading {
   font-size: 1.25rem;
