Feat : added installation page

--- a/main.css
+++ b/main.css
@@ -17,5 +17,7 @@
 @import url(style/Card.css);
 @import url(style/modal.css);
 @import url(style/Toast.css);
+@import url(style/installation.css);
+
 
 
