--- a/style/sidebar.css
+++ b/style/sidebar.css
@@ -1,7 +1,7 @@
 body {
   box-sizing: border-box;
 }
-.sidebar ul {
+.sidebar .nav2 {
   padding-bottom: 100px;
 }
 .sidebar ul li a {
@@ -11,21 +11,28 @@ body {
 .sidebar {
   position: fixed;
   background-color: var(--white-color);
-  width: 200px;
+  width: 230px;
   height: 100%;
   top: 0;
   left: 0;
   z-index: 1;
   overflow: scroll;
 }
-.sidebar h3 {
+.Installation {
   text-align: center;
-  padding: 100px 20px 20px 20px;
+  margin-top: 110px;
+  padding: 0px 20px 5px 20px;
+}
+.components{
+  text-align: center;
+  margin: 10px 0;
+  font-weight: 800;
+  padding-top: 10px;
 }
 .sidebar ul li {
   text-align: center;
   margin: 25px 0;
-  font-weight: 800;
+  font-weight: 500;
 }
 
 .sidebar ul li a:hover {
